kube/workflows/crider-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crider-deployment
  labels:
    app: nginx
spec:
  replicas: 2 #복제 레플리카셋 수
  selector:
    matchLabels:
      app: nginx-main
  template:
    metadata:
      labels:
        app: nginx-main #디플로이, 서비스 패키지의 식별값 (유지보수 용)
    spec:
      containers:
      - image: nginx #도커허브 이미지명
        name: nginx #컨테이너의 이름
          # - containerPort: 80 #파드의 포트
        # env:
        #   - name: #환경변수 명
        #     value: #환경변수 값
        #   # 환경변수가 더 필요할 경우 아래에 같은 방식으로 적어주면 된다.
