kube/workflows/crider-service.yml
## 서비스 ##
# 별도 설정이 없기 때문에 Cluster ip 로 설정된다.

apiVersion: v1
kind: Service
metadata:
  name: crider-service
spec:
  selector:
    app: nginx-main #디플로이, 서비스 패키지의 식별값 (유지보수 용)
  ports:
    - protocol: TCP #프로토콜 # spring boot 는 안적어도 됨
      port: 80 #외부 포트
      targetPort: 80 #내부 포트
